[package]
name = "rustmameui"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
config = "0.15"
dioxus = { version = "0.6", features = [] }
dirs = "6.0"
env_logger = "0.11"
locale_config = "0.3"
log = "0.4"
quick-xml = "0.37"
rayon = "1.10"
rfd = "0.15"
rust-i18n = "3"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tokio = { version = "1", features = [ "full" ] }
which = "7"
zip = "2.6"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
strip = true

[package.metadata.i18n]
available-locales = ["en", "it"]
default-locale = "en"
